# DIEngine

./: .gitmodules  CMakeLists.txt  DIEngine.cpp  readme
engine/: CMakelists.txt  base.cpp  base.h  main.cpp  model.cpp  model.h  tgaimage.cpp  tgaimage.h
